--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  background-color: #f5ba13;
+  background-color: #f5ba13; 
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -44,6 +44,16 @@ footer p {
   margin: 16px;
   float: left;
 }
+
+.form{
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 0 2px 5px #ccc;
+  padding: 10px;
+  width: 240px;
+  margin: 16px auto;
+}
+
 .note h1 {
   font-size: 1.1em;
   margin-bottom: 6px;
