--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,13 @@ footer {
 footer p {
   color: #ccc;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 .note {
   background: #fff;
   border-radius: 7px;
@@ -45,14 +52,6 @@ footer p {
   float: left;
 }
 
-.form{
-  background: #fff;
-  border-radius: 7px;
-  box-shadow: 0 2px 5px #ccc;
-  padding: 10px;
-  width: 240px;
-  margin: 16px auto;
-}
 
 .note h1 {
   font-size: 1.1em;
@@ -66,24 +65,13 @@ footer p {
   word-wrap: break-word;
 }
 
-input {
-  width: 90%;
-  text-align: center;
-  padding: 16px 24px;
-  background-color: rgb(0, 68, 113);
-
-  border-radius: 8px;
-  color: #ccc;
-  border: none;
-}
-
 button {
-  width: 90%;
   text-align: center;
-  padding: 16px 24px;
-  color: rgb(0, 68, 113);
-  background-color: #ccc;
-  border-radius: 8px;
+  padding: 10px;
+  color: rgb(252, 252, 252);
+  background-color: #f5ba13;
+    box-shadow: 0 2px 7px #a2a2a2;
+  border-radius: 50%;
   border: none;
   cursor: pointer;
 }
@@ -95,8 +83,47 @@ form {
   gap: 10px;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
+
+                      /* FORMS */                                        
+
+.form {
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 0 2px 5px #ccc;
+  padding: 10px;
+  width: 500px;
+  margin: 16px auto;
+  position: relative;
+}
+
+input {
   width: 100%;
+  /* text-align: center; */
+  padding: 12px;
+  border: none;
+  /* border: 1px solid #951414; */
+  /* border-radius: 8px; */
+  color: #020202;
+}
+
+input:focus {
+  outline: none;
+  border-color: none;
+}
+
+.form button {
+  position: absolute;
+  bottom: -15px;
+  right: 15px;
+}
+
+#notearea {
+  /* height: 150px; */
+  padding: 8px 12px;
+  border: none;
+  border-top: 1px solid #a2a2a2;
+}
+#notearea:focus {
+border-color: none;
+outline: none;
 }
