--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ footer p {
   width: 240px;
   margin: 16px;
   float: left;
+  position: relative;
 }
 
 
@@ -68,10 +69,7 @@ footer p {
 button {
   text-align: center;
   padding: 10px;
-  color: rgb(252, 252, 252);
-  background-color: #f5ba13;
-    box-shadow: 0 2px 7px #a2a2a2;
-  border-radius: 50%;
+  box-shadow: 0 2px 7px #a2a2a2;
   border: none;
   cursor: pointer;
 }
@@ -112,6 +110,9 @@ input:focus {
 }
 
 .form button {
+    color: rgb(252, 252, 252);
+  background-color: #f5ba13;
+  border-radius: 50%;
   position: absolute;
   bottom: -15px;
   right: 15px;
@@ -126,4 +127,13 @@ input:focus {
 #notearea:focus {
 border-color: none;
 outline: none;
+}
+
+.note button {
+  position: absolute;
+right: 2px;
+top: 2px;
+width: 25px;
+padding: 0;
+background-color: #f5ba13;
 }
